--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "google-home-baby-sit",
   "version": "1.0.0",
@@ -6,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-	  "scan": "dash-button scan"
+    "scan": "dash-button scan"
   },
   "author": "Hiroyuki Ota",
   "license": "MIT",
   "dependencies": {
-    "dash-button": "^3.2.0"
+    "dash-button": "^3.2.0",
+    "google-home-notifier": "^1.2.0"
   }
 }
