--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "Hiroyuki Ota",
   "license": "MIT",
   "dependencies": {
+    "@slack/client": "^3.15.0",
+    "@slack/events-api": "^1.0.1",
     "dash-button": "^3.2.0",
-    "google-home-notifier": "^1.2.0"
+    "google-auth-library": "^1.1.0",
+    "google-home-notifier": "^1.2.0",
+    "googleapis": "^25.0.0"
   }
 }
